temporary fix to grid item text overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,10 @@ body {
   );
   text-align: center;
 }
+
+.main-title {
+  font-family: 'Bigelow Rules';
+  font-size: 4rem;
+  margin-top: 2rem;
+  color: rgb(6, 208, 208);
+}
